@@ -13,6 +13,8 @@ import nl.jqno.equalsverifier.internal.exceptions.MessagingException;
 import nl.jqno.equalsverifier.internal.instantiation.UserPrefabValueProvider;
 import nl.jqno.equalsverifier.internal.instantiation.vintage.FactoryCache;
 import nl.jqno.equalsverifier.internal.reflection.FieldCache;
+import nl.jqno.equalsverifier.internal.reflection.kotlin.KotlinProbe;
+import nl.jqno.equalsverifier.internal.reflection.kotlin.KotlinScreen;
 import nl.jqno.equalsverifier.internal.util.*;
 import nl.jqno.equalsverifier.internal.util.Formatter;
 import org.objenesis.Objenesis;
@@ -168,9 +170,12 @@ public class SingleTypeEqualsVerifierApi<T> implements EqualsVerifierApi<T> {
      */
     @CheckReturnValue
     public <S> SingleTypeEqualsVerifierApi<T> withPrefabValuesForField(String fieldName, S red, S blue) {
-        Validations.validateFieldNamesExist(type, Arrays.asList(fieldName), actualFields);
-        PrefabValuesApi.addPrefabValuesForField(fieldCache, objenesis, type, fieldName, red, blue);
-        return withNonnullFields(fieldName);
+        String translated = KotlinScreen.isKotlin(type) && KotlinScreen.canProbe()
+                ? KotlinProbe.translateKotlinToBytecodeFieldName(type, fieldName)
+                : fieldName;
+        Validations.validateFieldNamesExist(type, List.of(translated), actualFields);
+        PrefabValuesApi.addPrefabValuesForField(fieldCache, objenesis, type, translated, red, blue);
+        return withNonnullFields(translated);
     }
 
     /** {@inheritDoc} */
@@ -241,10 +246,13 @@ public class SingleTypeEqualsVerifierApi<T> implements EqualsVerifierApi<T> {
     private SingleTypeEqualsVerifierApi<T> withFieldsAddedAndValidated(
             Set<String> collection,
             List<String> specifiedFields) {
-        collection.addAll(specifiedFields);
+        List<String> translated = KotlinScreen.isKotlin(type) && KotlinScreen.canProbe()
+                ? KotlinProbe.translateKotlinToBytecodeFieldNames(type, specifiedFields)
+                : specifiedFields;
+        collection.addAll(translated);
 
         Validations.validateFields(allIncludedFields, allExcludedFields);
-        Validations.validateFieldNamesExist(type, specifiedFields, actualFields);
+        Validations.validateFieldNamesExist(type, translated, actualFields);
         Validations.validateWarningsAndFields(warningsToSuppress, allIncludedFields, allExcludedFields);
         return this;
     }
